# qmc-decode

./: CMakeLists.txt  Makefile  test.py
src/: main.c  qmc_crypto.c  qmc_crypto.h
